# BWAPI-Lua

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  make.bat
dependencies/bwapi/: CMakeLists.txt  starcraftver.h  svnrev.h
dependencies/bwapi/BWAPI/Source/: Assembly.cpp  Assembly.h  CodePatch.cpp  CodePatch.h  Config.cpp  Config.h  DLLMain.cpp  DLLMain.h  Detours.cpp  Detours.h  ExceptionFilter.cpp  ExceptionFilter.h  GameUpdate.cpp  Graphics.cpp  Graphics.h  NewHackUtil.cpp  NewHackUtil.h  Resolution.cpp  Resolution.h  Thread.cpp  Thread.h  WMode.cpp  WMode.h
dependencies/bwapi/BWAPI/Source/BW/: AIController.h  BNETCommands.h  Bitmap.cpp  Bitmap.h  CBullet.h  CImage.cpp  CImage.h  COrder.h  CSprite.cpp  CSprite.h  CThingy.cpp  CThingy.h  CUnit.cpp  CUnit.h  CheatFlags.h  CheatType.cpp  Dialog.cpp  Dialog.h  FlingyID.h  Font.cpp  Font.h  GroupFlags.h  Internal.cpp  MenuPosition.h  MiniTileFlags.h  Offsets.h  OrderFlags.h  OrderTypes.cpp  OrderTypes.h  Path.cpp  Path.h  Pathing.cpp  Pathing.h  PlayerID.h  PositionUnitTarget.cpp  Render.cpp  Render.h  Target.cpp  Target.h  TileSet.cpp  (+9 more)
dependencies/bwapi/BWAPI/Source/BWAPI/: BulletImpl.cpp  BulletImpl.h  Command.h  CommandTemp.h  ForceImpl.h  GameBullets.cpp  GameCommands.cpp  GameDrawing.cpp  GameEvents.cpp  GameImpl.cpp  GameImpl.h  GameInternals.cpp  GameMenu.cpp  GameUnits.cpp  Map.cpp  Map.h  PlayerImpl.cpp  PlayerImpl.h  RegionImpl.cpp  RegionImpl.h  Server.cpp  Server.h  UnitImpl.cpp  UnitImpl.h  UnitUpdate.cpp
dependencies/bwapi/BWAPILIB/: UnitCommand.cpp
dependencies/bwapi/BWAPILIB/Source/: BulletType.cpp  Color.cpp  Common.h  DamageType.cpp  Error.cpp  Event.cpp  ExplosionType.cpp  Filters.cpp  GameType.cpp  Order.cpp  PlayerType.cpp  PositionUnit.cpp  Race.cpp  Regionset.cpp  TechType.cpp  Unit.cpp  UnitCommandType.cpp  UnitSizeType.cpp  UnitType.cpp  Unitset.cpp  UpgradeType.cpp  WeaponType.cpp
dependencies/bwapi/Shared/: Templates.h  UnitShared.cpp
dependencies/bwapi/Storm/: storm.cpp  storm.def
dependencies/bwapi/Util/Source/Util/: Convenience.h  MemoryFrame.cpp  SharedMemory.cpp  SharedMemory.h  clamp.h  sha1.cpp
dependencies/sol/: sol.hpp.old
docs/: make.bat
docs/ext/redjack/sphinx/: lua.py
docs/source/: conf.py  index.rst
docs/source/_include/: api-enum.rst  interface-clientinfo.rst  interface-functions.rst  set-container-functions.rst  type-functions.rst
docs/source/api/: differences.rst  globals.rst  index.rst
docs/source/api/BWAPI/: index.rst
docs/source/api/BWAPI/classes/: Bullet.rst  BulletType.rst  Bulletset.rst  Color.rst  DamageType.rst  Error.rst  ExplosionType.rst  Force.rst  Forceset.rst  Game.rst  GameType.rst  Order.rst  Player.rst  PlayerType.rst  Playerset.rst  Position.rst  Race.rst  Region.rst  Regionset.rst  TechType.rst  TilePosition.rst  Unit.rst  UnitCommand.rst  UnitCommandType.rst  UnitSizeType.rst  UnitType.rst  Unitset.rst  UpgradeType.rst  WalkPosition.rst  WeaponType.rst
docs/source/api/BWAPI/data/: BulletTypes.rst  Colors.rst  CoordinateType.rst  DamageTypes.rst  Errors.rst  ExplosionTypes.rst  Filter.rst  Flag.rst  GameTypes.rst  Key.rst  Latency.rst  MouseButton.rst  Orders.rst  PlayerTypes.rst  Positions.rst  Races.rst  TechTypes.rst  Text.rst  UnitCommandTypes.rst  UnitTypes.rst  (+3 more)
docs/source/extensions/: modules-list.rst  using-modules.rst  writing-modules.rst
docs/source/getting-started/: installation.rst  your-first-ai.rst
examples/: .luacheckrc
examples/C++Extension/: CMakeLists.txt  helloworld.cpp  helloworld.def
examples/LogErrorsToFile/: init.lua
examples/LuaExampleAI/: init.lua
examples/SendTextREPL/: init.lua
src/bindings/: BWAPI_Lua.cpp  BWAPI_Lua.h  Bullet.cpp  BulletType.cpp  Bulletset.cpp  Color.cpp  CommonBindings.h  CoordinateType.cpp  DamageType.cpp  Error.cpp  ExplosionType.cpp  Filters.cpp  Flag.cpp  Force.cpp  Forceset.cpp  Game.cpp  GameType.cpp  Input.cpp  Interface.h  IsInstance.h  Latency.cpp  Order.cpp  Player.cpp  PlayerType.cpp  Playerset.cpp  Point.h  Position.cpp  PositionUnit.cpp  Race.cpp  Region.cpp  Regionset.cpp  SetContainer.h  TechType.cpp  TrainingSlot.h  Type.h  Unit.cpp  UnitCommand.cpp  UnitCommandType.cpp  UnitMembers.h  UnitSizeType.cpp  (+10 more)
src/module/: Dll.cpp  LuaAIModule.cpp  LuaAIModule.h
tests/TestBindings/: BindingTestHelpers.h  MockGame.h  MockUnit.h  TestColor.cpp  TestFilters.cpp  TestGame.cpp  TestInterface.cpp  TestIsInstance.cpp  TestPosition.cpp  TestPositionOrUnit.cpp  TestRace.cpp  TestRegister.cpp  TestSetContainer.cpp  TestUnitType.cpp  TestUpgradeType.cpp  TestWeaponType.cpp
tests/TestBindings/Lua/: .luacheckrc  TestColor.lua  TestFilters.lua  TestGame.lua  TestInterface.lua  TestIsInstance.lua  TestPosition.lua  TestPositionOrUnit.lua  TestRace.lua  TestSetContainer.lua  TestUnitType.lua  TestUpgradeType.lua  TestWeaponType.lua
