cmake_minimum_required (VERSION 2.6)
project (BWAPI)

set(BWAPI_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
set(BWAPI_SRC_DIR ${PROJECT_SOURCE_DIR}/BWAPI/Source)
set(BWAPILIB_SRC_DIR ${PROJECT_SOURCE_DIR}/BWAPILIB)
set(STORM_SRC_DIR ${PROJECT_SOURCE_DIR}/Storm)
set(UTIL_SRC_DIR ${PROJECT_SOURCE_DIR}/Util/Source)
set(SHARED_SRC_DIR ${PROJECT_SOURCE_DIR}/Shared)

# BWAPI
file(GLOB_RECURSE BWAPI_SRC_FILES ${BWAPI_SRC_DIR}/*.h ${BWAPI_SRC_DIR}/*.cpp ${SHARED_SRC_DIR}/*.h ${SHARED_SRC_DIR}/*.cpp)
add_library ( BWAPI ${BWAPI_SRC_FILES} )
set_target_properties ( BWAPI PROPERTIES COMPILE_DEFINITIONS _CRT_SECURE_NO_WARNINGS )
target_link_libraries ( BWAPI BWAPILIB Storm Util "Vfw32" "Version" )
set_target_properties( BWAPI PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS" )
target_include_directories( BWAPI PUBLIC ${BWAPI_SRC_DIR} )
target_include_directories( BWAPI PRIVATE ${SHARED_SRC_DIR} ${BWAPI_SRC_DIR}/BWAPI )

# BWAPILIB
file(GLOB_RECURSE BWAPILIB_SRC_FILES ${BWAPILIB_SRC_DIR}/*.h ${BWAPILIB_SRC_DIR}/*.cpp)
add_library ( BWAPILIB ${BWAPILIB_SRC_FILES} )
set_target_properties ( BWAPILIB PROPERTIES COMPILE_DEFINITIONS _CRT_SECURE_NO_WARNINGS )
target_include_directories( BWAPILIB INTERFACE ${BWAPILIB_SRC_DIR} )
target_include_directories( BWAPILIB PUBLIC ${BWAPI_INCLUDE_DIR} )

# Storm
file(GLOB_RECURSE STORM_SRC_FILES ${STORM_SRC_DIR}/*.h ${STORM_SRC_DIR}/*.cpp ${STORM_SRC_DIR}/*.def)
add_library ( Storm SHARED ${STORM_SRC_FILES} )
target_compile_definitions ( Storm PUBLIC _CRT_SECURE_NO_WARNINGS NOMINMAX )
set_target_properties( Storm PROPERTIES LINK_FLAGS "${CMAKE_LINK_DEF_FILE_FLAG}${STORM_SRC_DIR}/storm.def /SUBSYSTEM:WINDOWS" )
target_include_directories( Storm INTERFACE ${STORM_SRC_DIR} )

# Util
file(GLOB_RECURSE UTIL_SRC_FILES ${UTIL_SRC_DIR}/*.h ${UTIL_SRC_DIR}/*.cpp)
add_library ( Util ${UTIL_SRC_FILES} )
set_target_properties ( Util PROPERTIES COMPILE_DEFINITIONS _CRT_SECURE_NO_WARNINGS )
target_include_directories( Util PUBLIC ${UTIL_SRC_DIR} )